Bug 342275 - program use old currency
Summary: program use old currency
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.7.1
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-12-28 12:43 UTC by boyanbarca
Modified: 2014-12-29 17:08 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description boyanbarca 2014-12-28 12:43:51 UTC
Kmymoney use YUM as currency for Yugoslavia. This country does not exist for almost 12 years. It needs to be changed to Serbia and currency is Serbian dinar (RSD)

Reproducible: Always
Comment 1 Thomas Baumgart 2014-12-29 17:07:09 UTC
Git commit b3b15ce04d904f63d64b5103ebe725845ddac2dc by Thomas Baumgart.
Committed on 29/12/2014 at 17:02.
Pushed by tbaumgart into branch 'master'.

Remove Yugoslavian Dinar

The Yugoslavian Dinar is not in use for almost 12 years, so there
is no need to create it in new files. The replacement in Serbia is
the Serbian Dinar which is already created for new KMyMoney files.
If a user uses a file created with a KMyMoney version < 4.5.96 the
Serbian Dinar (RSD) needs to be created manually.

M  +0    -1    kmymoney/views/kmymoneyview.cpp

http://commits.kde.org/kmymoney/b3b15ce04d904f63d64b5103ebe725845ddac2dc
Comment 2 Thomas Baumgart 2014-12-29 17:08:14 UTC
Git commit 1fe52ae09343646080c283c93de3f5bd12e0bab7 by Thomas Baumgart.
Committed on 29/12/2014 at 17:02.
Pushed by tbaumgart into branch '4.7'.

Remove Yugoslavian Dinar

The Yugoslavian Dinar is not in use for almost 12 years, so there
is no need to create it in new files. The replacement in Serbia is
the Serbian Dinar which is already created for new KMyMoney files.
If a user uses a file created with a KMyMoney version < 4.5.96 the
Serbian Dinar (RSD) needs to be created manually.
(cherry picked from commit b3b15ce04d904f63d64b5103ebe725845ddac2dc)

M  +0    -1    kmymoney/views/kmymoneyview.cpp

http://commits.kde.org/kmymoney/1fe52ae09343646080c283c93de3f5bd12e0bab7